--- a/src/views/NewUserView.fxml
+++ b/src/views/NewUserView.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -26,7 +27,7 @@
                   <Font name="Times New Roman" size="36.0" />
                </font>
             </Label>
-            <HBox prefHeight="216.0" prefWidth="760.0">
+            <HBox alignment="CENTER" prefHeight="216.0" prefWidth="760.0" spacing="20.0">
                <children>
                   <GridPane prefHeight="216.0" prefWidth="372.0">
                     <columnConstraints>
@@ -50,6 +51,7 @@
                         <DatePicker fx:id="birthday" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                      </children>
                   </GridPane>
+                  <ImageView fx:id="imageView" fitHeight="200.0" fitWidth="279.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </HBox>
             <Label fx:id="errMsgLabel" text="Label" />
